# SPINO

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  build_docs.sh  pyproject.toml  requirements.txt  update_pypi.sh
.github/workflows/: docs.yml  publish.yml
docs/: Makefile  requirements.txt
docs/source/: architecture.md  conf.py  configuration.md  credits.md  index.rst  installation.md  usage.md
docs/source/_static/: custom.css
paper/: build_paper_pdf.sh  paper.bib  paper.md
src/spino/: __init__.py  __main__.py  app.py  config_io.py  runner.py  theme.py
src/spino/data/cat/: PS_latest_TESS.csv
src/spino/gui_toolkit/: graphics.yaml
src/spino/gui_toolkit/layout/: GraphicsConfig.py  MyPanel.py  MyTabPanel.py  ScaleManager.py
src/spino/gui_toolkit/widget/: HelpButton.py  MyButton.py  MyCheckBox.py  MyDropDown.py  MyEntry.py  MyLabel.py  MyTable.py  MyTextField.py
src/spino/panels/: base.py  catalog_panel.py  constraints_panel.py  custom_planets_panel.py  filters_panel.py  observatory_panel.py  output_panel.py  run_panel.py  telluric_panel.py
src/spino/pipeline/: nea_fetch.py  phase_config.py  phase_kepler.py  phase_plotter.py  phase_scale_height.py  phase_scheduler.py  phase_summary.py  phase_telluric_plot.py  phase_tsm_calculator.py
tests/: conftest.py  test_compose_orbsmax_kepler.py  test_custom_planet_fields.py  test_match_events_nonfinite.py  test_orbit_solution.py  test_phase_kepler.py  test_summary_kp.py  test_telluric_drv.py  test_telluric_plot_render.py  test_transit_geometry_nontransiting.py  test_transit_geometry_omega.py
